--- a/source/styles/app/navigation.less
+++ b/source/styles/app/navigation.less
@@ -1,20 +1,13 @@
-html, body {
-  height: 100%;
-}
+@import "app/variables";
 
-#container-wrp { // TODO: fix it goes too much bottom
-  min-height: 100%;
-  height: auto !important;
-  height: 100%;
-  margin: 80px auto -140px;
-}
-#push, #footer {
-  height: 60px;
+
+#container {
+  padding-top: @content-margin;
 }
 
 /* Remove margin when navigation goes static in narrow viewports */
 @media (max-width: 979px) {
-  #container-wrp {
-    margin: 0 auto -60px;
+  #container {
+    padding-top: 0;
   }
 }
