--- a/source/styles/app/variables.less
+++ b/source/styles/app/variables.less
@@ -3,3 +3,6 @@
 
 @ff-sans: "Inconsolata";
 @ff-monospace: "Inconsolata";
+
+@footer-height: 60px;
+@content-margin: 80px; // >= navigation height
